# ecomm-ops-brain

./: .env.example  .gitignore  DOCKER.md  INTERVIEW.md  MASTER.md  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml  problemStatement.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: action_agent.py  base.py  intent_router.py  inventory_agent.py  marketing_agent.py  middleware.py  reflection_agent.py  sales_agent.py  support_agent.py
backend/app/api/: deps.py
backend/app/api/routes/: actions.py  chat.py  health.py  incidents.py
backend/app/core/: config.py  exceptions.py  llm.py  observability.py
backend/app/db/: checkpointer.py  postgres.py  qdrant.py  redis.py  seed.py
backend/app/db/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_extend_schema.sql  004_varied_seed_data.sql
backend/app/graph/: edges.py  nodes.py  state.py  workflow.py
backend/app/memory/: episodic.py  structured.py  working.py
backend/app/models/: actions.py  api.py  domain.py
backend/app/repositories/: factory.py  interfaces.py  marketing.py  sales.py
backend/app/tools/: action_tools.py  inventory_tools.py  marketing_tools.py  sales_tools.py  support_tools.py
backend/tests/: conftest.py
backend/tests/eval/: conftest.py  test_cases.json  test_deepeval.py
backend/tests/integration/: test_api_routes.py
backend/tests/unit/: test_advanced.py  test_graph_and_memory.py  test_intent_router.py  test_mock_repos.py  test_models.py  test_observability.py  test_reflection_agent.py  test_tools.py
docs/: hld.md  (+12 more)
(+37 files in other folders)
