[project]
name = "ecomm-ops-brain-backend"
version = "0.1.0"
description = "AI E-commerce Operations Brain — Backend"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",

    # LangChain / LangGraph
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "langsmith>=0.1",

    # Azure OpenAI
    "openai>=1.40",

    # Data / DB
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "qdrant-client>=1.9,<1.11",
    "redis>=5.0",

    # LangGraph checkpointer
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",

    # Observability
    "langfuse>=2.0",
    "deepeval>=0.21",

    # Models / Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: DeepEval LLM evaluation tests (makes real Azure OpenAI calls, slow)",
]
